--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #050b1a;
+        background-color: #f8fafc;
       }
       .no-scrollbar::-webkit-scrollbar {
         display: none;
@@ -29,9 +29,9 @@
         background: transparent;
       }
       ::-webkit-scrollbar-thumb {
-        background: #1e293b;
+        background: #e2e8f0;
         border-radius: 20px;
-        border: 2px solid #050b1a;
+        border: 2px solid #f8fafc;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #910000;
@@ -40,8 +40,24 @@
         from { opacity: 0; transform: translateY(10px); }
         to { opacity: 1; transform: translateY(0); }
       }
+      @keyframes brand-pulse {
+        0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(145, 0, 0, 0.4); }
+        70% { transform: scale(1.05); box-shadow: 0 0 0 15px rgba(145, 0, 0, 0); }
+        100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(145, 0, 0, 0); }
+      }
+      @keyframes send-pulse-fade {
+        0% { opacity: 1; transform: scale(1); }
+        50% { opacity: 0.3; transform: scale(0.9); }
+        100% { opacity: 1; transform: scale(1); }
+      }
       .animate-in {
         animation: fade-in 0.5s ease-out forwards;
+      }
+      .animate-brand-pulse {
+        animation: brand-pulse 2s infinite;
+      }
+      .animate-send-feedback {
+        animation: send-pulse-fade 0.4s ease-in-out;
       }
     </style>
   <script type="importmap">
